# spice-kitten

./: CMakeLists.txt  LICENSE  Makefile  README.md  apt  spice_kitten.c  way.c
.github/workflows/: build-linux.yml
libspice/: sp_core.h  sp_proto.c  sp_screen.c
libspice/include/: libspice.h
pkg/gentoo/: metadata.xml  spice-kitten-9999.ebuild
